<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:paddingTop="10sp"
        android:text="@string/appNameVersion"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_gauges"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/btnGauges" />

    <Button
        android:id="@+id/button_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_gauges"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:text="@string/btnButton" />

    <Button
        android:id="@+id/button_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_buttons"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:text="@string/btnAbout" />
    
</RelativeLayout>
