<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:paddingTop="20sp"
        android:text="@string/appNameVersion"
        android:textSize="30sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        tools:ignore="RelativeOverlap">

        <TextView
            android:id="@+id/textViewControl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:paddingBottom="10dp"
            android:text="@string/textControl"
            android:textSize="20sp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:id="@+id/relativeLayout2"
            android:layout_below="@+id/textViewControl"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_On"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/strBtnOn" />

        <Button
            android:id="@+id/btn_Off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_alignBottom="@+id/btn_On"
            android:layout_toRightOf="@+id/btn_On"
            android:text="@string/strBtnOff"
            android:layout_marginStart="30dp"
            android:layout_toEndOf="@+id/btn_On" />

        </RelativeLayout>

        <TextView
            android:id="@+id/textViewSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relativeLayout2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/textSpeed"
            android:textSize="18sp" />

        <SeekBar
            android:id="@+id/seekBar_1"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/textViewSpeed"
            android:progress="0" />

    </RelativeLayout>

    <TextView
        android:id="@+id/textViewCmdSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:textSize="12sp"
        android:layout_alignParentStart="true" />

</RelativeLayout>